python/hands-on/Project-001-Roman-Numerals-Converter/serhat-cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.
  
Parameters:

  myVPC:
    Description: Select your VPC
    Type: AWS::EC2::VPC::Id

  myIT:
    Description: Select instance type
    Type: String
    Default: t2.micro 
    AllowedValues: 
     - t2.micro
     - t3.micro
     - t2.nano
     - t3.nano
  myKP:
    Description: Select your Key
    Type: AWS::EC2::KeyPair::KeyName


Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-0dc2d3e4c0f9ebd18
    us-east-2:
      AMI: ami-0233c2d874b811deb
    us-west-1:
      AMI: ami-0ed05376b59b90e46
    us-west-2:
      AMI: ami-0dc8f589abe99f538
    eu-west-1:
      AMI: ami-058b1b7fe545997ae

  
Resources:
  MyEC2instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap 
         - RegionImageMap
         - !Ref AWS::Region
         - AMI
      InstanceType: !Ref myIT
      KeyName: !Ref myKP
      SecurityGroups:
        - !Ref mySG
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64: |
          #! /bin/bash
          yum update -y
          yum install python3 -y
          pip3 install flask
          wget https://raw.githubusercontent.com/serhat-project/my-projects/main/python/hands-on/Project-001-Roman-Numerals-Converter/app.py
          mkdir templates
          cd templates
          wget https://raw.githubusercontent.com/serhat-project/my-projects/main/python/hands-on/Project-001-Roman-Numerals-Converter/templates/index.html
          wget https://github.com/serhat-project/my-projects/blob/main/python/hands-on/Project-001-Roman-Numerals-Converter/templates/result.html
          cd ..
          python3 app.py
         
  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref myVPC
  
Outputs: 
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt MyEC2instance.PublicDnsName
    Description: Roman Numerals Converter Application URL
